# maju-backend

./: .ebignore  .gitignore  Procfile  application.py  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  02_python.config  03_https.config
alembic/: env.py
alembic/versions/: 002e3a60e4d5_.py  01db9b7249cc_.py  0e403e679141_.py  17abaaa03bfa_.py  19e4f2240376_.py  1bb11908b80b_.py  1bfd0138835b_.py  26bc5ab385c7_.py  2e31102ed46b_.py  30f135dfc02d_.py  34f2a46a8d7a_.py  3c5a341583a6_.py  43841d280760_.py  43d47fe7a8a5_.py  43dbe204086d_.py  446bc63ea4be_.py  4472029fa321_.py  4655bf6ecb32_.py  46ce07c8689c_.py  476e3648a315_.py  484763b406c4_.py  502e1dbe107f_.py  517057595500_category.py  543de8310230_.py  5608853c56cf_.py  56c8aaf41f6d_.py  5717cadd79c4_.py  5ec15f039915_.py  62e1ebdcd78a_.py  638c712f4077_.py  63f7d6563dc0_.py  6aeee37b9b84_.py  6f4a4e7199b9_.py  73c33dc15177_.py  79dcf8ce7f19_.py  80b044d90714_.py  834d18bcef9b_.py  840592443487_.py  841e90dfdd37_.py  877f731bf8b9_.py  (+27 more)
builds/: Dockerfile
scripts/: create_superuser.py  dummy_ai_scores.py  iw_amenities_images.py  iw_images.py  migrate_images_to_s3.py  migrate_reference.py  migrate_studio.py  prestart.sh  wb_manual_data.py  wedding_halls_data.json
src/: main.py
src/admin/: __init__.py  auth.py  models.py  setup.py
src/core/: config.py  db.py  enums.py  exceptions.py  logging.py  oauth_client.py  security.py
src/crud/: __init__.py  base.py  crud_categories.py  crud_checklist.py  crud_checklist_category.py  crud_magazine.py  crud_news.py  crud_product.py  crud_product_ai_review.py  crud_product_category.py  crud_product_hall.py  crud_product_image.py  crud_product_score.py  crud_suggest_halls.py  crud_suggest_search_keyword.py  crud_user.py  crud_user_spents.py  crud_wishlist.py
src/cruds/: categories.py  checklists.py  crud_categories.py  crud_checklist.py  crud_users.py  product_categories.py  products.py  suggest_search_keywords.py  user_wishlists.py  users.py
src/middleswares/: logging.py
src/models/: __init__.py  _mixin.py  auth.py  categories.py  (+20 more)
tests/: conftest.py
(+65 files in other folders)
